2010-01-14  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Unreviewed.

        [Qt] Use a different Makefile names for sources generation and compilation.
        This prevents Makefile overwriting when running build-webkit twice.

        * Scripts/webkitdirs.pm:

2010-01-14  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Add an "alien_QLabel" classId for manual testing of alien widgets.

        https://bugs.webkit.org/show_bug.cgi?id=33373

        * QtLauncher/main.cpp:
        (WebPage::createPlugin):

2010-01-14  Eric Seidel  <eric@webkit.org>

        No review, rolling out r53249.
        http://trac.webkit.org/changeset/53249
        https://bugs.webkit.org/show_bug.cgi?id=33617

        This caused http/tests/security/local-user-CSS-from-
        remote.html to fail on the Qt Release Build Bot.

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::WebPage::resetSettings):
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::overridePreference):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

2010-01-14  Chris Jerdonek  <chris.jerdonek@gmail.com>

        Reviewed by Shinichiro Hamaji.

        Moved error() from cpp_style.py to checker.py.

        https://bugs.webkit.org/show_bug.cgi?id=33620

        * Scripts/check-webkit-style:
          - Addressed FIXME to not set global state.

        * Scripts/webkitpy/style/checker.py:
          - Added argument validation to ProcessorOptions constructor.
          - Added should_report_error() to ProcessorOptions class.
          - Removed set_options().
          - Added StyleChecker class.

        * Scripts/webkitpy/style/checker_unittest.py:
          - Added unit test class for ProcessorOptions class.
          - Added unit test to check that parse() strips white space.

        * Scripts/webkitpy/style/cpp_style.py:
          - Removed "filter" and "output_format" methods.